@@ -1,14 +1,3 @@
-package com.example.demo.service.impl;
-
-import com.example.demo.model.SaleTransaction;
-import com.example.demo.service.SaleTransactionService;
-import org.springframework.stereotype.Service;
-
-import java.math.BigDecimal;
-import java.sql.Timestamp;
-import java.util.Collections;
-import java.util.List;
-
 @Service
 public class SaleTransactionServiceImpl implements SaleTransactionService {
 
@@ -18,23 +7,11 @@ public class SaleTransactionServiceImpl implements SaleTransactionService {
             tx.getTransactionAmount().compareTo(BigDecimal.ZERO) <= 0) {
             throw new IllegalArgumentException("Transaction amount must be > 0");
         }
-
         tx.setTransactionDate(new Timestamp(System.currentTimeMillis()));
         return tx;
     }
 
-    @Override
-    public List<SaleTransaction> getSalesForCode(Long codeId) {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<SaleTransaction> getSalesForInfluencer(Long influencerId) {
-        return Collections.emptyList();
-    }
-
-    @Override
-    public List<SaleTransaction> getSalesForCampaign(Long campaignId) {
-        return Collections.emptyList();
-    }
+    public List<SaleTransaction> getSalesForCode(Long id) { return List.of(); }
+    public List<SaleTransaction> getSalesForInfluencer(Long id) { return List.of(); }
+    public List<SaleTransaction> getSalesForCampaign(Long id) { return List.of(); }
 }
